[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hxa"
version = "0.0.4"
authors = [
  { name="Riles Leroy", email="rilesleroy@gmail.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/shmoich/hxapy"