[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hxapy"
version = "0.0.12"
authors = [
  { name="Riles Leroy", email="rilesleroy@gmail.com" },
]
description = "A hxa library for python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/shmoich/hxapy"
